# openclaw_hub

./: .gitignore  README.md  pyproject.toml
01_tools/: ollama.md
05_job_hunt/: 2026-02-24-aimms-erpnext-dev.md  2026-02-24-aimms-group-erpnext-developer-v2.md  2026-02-24-aimms-group-erpnext-developer.md
openclaw/: PROJECT_STATE.md  ollama_client.py  tasks.py
openclaw.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
openclaw/prompts/: job_analysis.txt
openclaw/skills/: read_text_file.py
